--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,6 +362,21 @@ header .top .USD {
 header .top .USD .left {
   margin-right: 15px;
 }
+header .top .USD .left .money-change {
+  padding: 20px 90px 0 20px;
+  position: fixed;
+  background-color: white;
+  border: 1px solid #e2e2e2;
+  display: none;
+}
+header .top .USD .left .money-change p {
+  font-size: 12px;
+  color: #7d7d7d;
+  cursor: pointer;
+}
+header .top .USD .left .money-change p:hover {
+  background-color: rgba(2, 90, 191, 0.7490196078);
+}
 header .top .USD .left a {
   color: rgb(101, 101, 101);
   padding-right: 15px;
@@ -372,6 +387,21 @@ header .top .USD .left a {
 header .top .USD .left a i {
   margin-left: 5px;
   font-size: 10px !important;
+}
+header .top .USD .right .sell-with-us {
+  padding: 20px 90px 0 20px;
+  position: fixed;
+  background-color: white;
+  border: 1px solid #e2e2e2;
+  display: none;
+}
+header .top .USD .right .sell-with-us p {
+  font-size: 12px;
+  color: #7d7d7d;
+  cursor: pointer;
+}
+header .top .USD .right .sell-with-us p:hover {
+  background-color: rgba(2, 90, 191, 0.7490196078);
 }
 header .top .USD .right a {
   height: 100%;
@@ -505,8 +535,8 @@ header .mid .inputs .all-category-select {
   transition: 0.3s ease-in-out;
   width: 30%;
   height: 47px;
-  border-top: 1.5px solid var(--theme-gray);
-  border-bottom: 1.5px solid var(--theme-gray);
+  border-top: 1.5px solid #e2e2e2;
+  border-bottom: 1.5px solid #e2e2e2;
 }
 header .mid .inputs button {
   border: none;
@@ -519,8 +549,8 @@ header .mid .inputs button {
   cursor: pointer;
   background-color: #f7ba01;
 }
-header .mid .inputs button svg {
-  color: #fff;
+header .mid .inputs button svg path {
+  fill: #fff !important;
 }
 header .svgs {
   display: flex;
