--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,21 @@ header {
       justify-content: start;
       .left {
         margin-right: 15px;
+        .money-change {
+          p {
+            font-size: 12px;
+            color: #7d7d7d;
+            cursor: pointer;
+          }
+          p:hover {
+            background-color: #025abfbf;
+          }
+          padding: 20px 90px 0 20px;
+          position: fixed;
+          background-color: white;
+          border: 1px solid #e2e2e2;
+          display: none;
+        }
 
         a {
           color: rgb(101, 101, 101);
@@ -49,6 +64,21 @@ header {
         }
       }
       .right {
+        .sell-with-us {
+          p {
+            font-size: 12px;
+            color: #7d7d7d;
+            cursor: pointer;
+          }
+          p:hover {
+            background-color: #025abfbf;
+          }
+          padding: 20px 90px 0 20px;
+          position: fixed;
+          background-color: white;
+          border: 1px solid #e2e2e2;
+          display: none;
+        }
         a {
           height: 100%;
           color: rgb(101, 101, 101);
@@ -183,8 +213,8 @@ header {
         transition: 0.3s ease-in-out;
         width: 30%;
         height: 47px;
-        border-top: 1.5px solid var(--theme-gray);
-        border-bottom: 1.5px solid var(--theme-gray);
+        border-top: 1.5px solid #e2e2e2;
+        border-bottom: 1.5px solid #e2e2e2;
       }
       button {
         border: none;
@@ -196,8 +226,8 @@ header {
         border-radius: 0 5px 5px 0;
         cursor: pointer;
         background-color: #f7ba01;
-        svg {
-          color: #fff;
+        svg path {
+          fill: #fff !important;
         }
       }
     }
